src/objects/EBC_Resource__c.object
<CustomObject>
    <description>Hold the customer resource used in EBroadcast product</description>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>EBC Resources</relationshipLabel>
        <relationshipName>EBC_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <description>Image height as returned by Exact Target</description>
        <inlineHelpText>Image height as returned by Exact Target</inlineHelpText>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_Size__c</fullName>
        <description>Image Size</description>
        <inlineHelpText>Image Size</inlineHelpText>
        <label>Image Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_Type__c</fullName>
        <description>Image Type</description>
        <inlineHelpText>Image Type</inlineHelpText>
        <label>Image Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>ExactTarget Public URL</description>
        <inlineHelpText>ExactTarget Public URL</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Ready__c</fullName>
        <description>Is image has been pushed to Exact Target</description>
        <formula>!ISBLANK( Image_URL__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is image has been pushed to Exact Target</inlineHelpText>
        <label>Is Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_KBytes__c</fullName>
        <description>Size in KiloBytes</description>
        <formula>IF(ISNULL(Image_Size__c),0,Image_Size__c) / 1024</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Size in KiloBytes</inlineHelpText>
        <label>Size KBytes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thumbnail_URL__c</fullName>
        <description>ExactTarget Thumbnail URL</description>
        <inlineHelpText>ExactTarget Thumbnail URL</inlineHelpText>
        <label>Thumbnail URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <description>Image width as returned by Exact Target</description>
        <inlineHelpText>Image width as returned by Exact Target</inlineHelpText>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EBC Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Image_Size__c</columns>
        <columns>Image_Type__c</columns>
        <columns>Billing_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>EBC Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBC Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>